adding components and hooks aliases

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -13,7 +13,9 @@
     "^@core/(.*)$",
     "^@server/(.*)$",
     "^@ui/(.*)$",
+    "@pages/(.*)$",
     "@components/(.*)$",
+    "@hooks/(.*)$",
     "@assets/(.*)$",
     "^[./]"
   ],
