adding api and interface alias

--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -13,10 +13,12 @@
     "^@core/(.*)$",
     "^@server/(.*)$",
     "^@ui/(.*)$",
+    "@apis/(.*)$",
     "@pages/(.*)$",
     "@components/(.*)$",
     "@hooks/(.*)$",
     "@assets/(.*)$",
+    "@interfaces(.*)$",
     "^[./]"
   ],
   "importOrderSortSpecifiers": true
