--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,9 @@
       "@components/*": ["src/components/*"],
       "@assets/*": ["src/assets/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@pages/*": ["src/pages/*"]
+      "@pages/*": ["src/pages/*"],
+      "@apis/*": ["src/apis/*"],
+      "@interfaces": ["src/interfaces"]
     },
 
     /* Bundler mode */
