--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -14,6 +14,7 @@
     "^@server/(.*)$",
     "^@ui/(.*)$",
     "@apis/(.*)$",
+    "@contexts/(.*)$",
     "@pages/(.*)$",
     "@components/(.*)$",
     "@hooks/(.*)$",
